# visual-search

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
admin/: pyproject.toml
admin/admin/: create_infra.py  index_images.py  remove_infra.py  search_images.py
app/: Dockerfile  main.py
app/api/: index_endpoint.py  search_endpoint.py
app/core/: config.py
app/db/: image_storage.py  vector_db.py  vector_db_loader.py
app/models/: image_encoder.py  model_loader.py
app/services/: indexing.py  search.py
app/static/js/: visual-search.js
entry_point/: Dockerfile  pyproject.toml
entry_point/app/api/: indexing_service.py  search_service.py
entry_point/app/static/js/: visual-search.js
entry_point/app/templates/: index.html
entry_point/openapi_server/: __main__.py
entry_point/openapi_server/controllers/: default_controller.py
entry_point/openapi_server/models/: __init__.py  get_health200_response.py  get_health500_response.py  index_images200_response.py  index_images400_response.py  index_images_request.py  inline_object.py  inline_object1.py  retrieved_image.py  search_images200_response.py
entry_point/openapi_server/openapi/: openapi.yaml
entry_point/openapi_server/test/: test_indexing_controller.py  test_search_controller.py
image_encoding_serivice/app/: image_encoder.py  image_encoder_loader.py  image_encoding_server.py  image_encoding_servicer.py
image_encoding_serivice/proto/: image_encoding_service.proto  image_encoding_service_pb2.py  image_encoding_service_pb2_grpc.py
image_encoding_service/: Dockerfile  pyproject.toml
image_encoding_service/app/: main.py
image_encoding_service/app/image_encoder/: image_encoder_loader.py
image_encoding_service/app/indexing_endpoint/: image_encoding_worker.py
image_encoding_service/app/search_endpoint/: image_encoding_server.py  image_encoding_servicer.py
indexing_service/: Dockerfile  pyproject.toml
indexing_service/app/: image_indexing.py  indexing_service.py  indexing_servicer.py  main.py  message_routing.py  process_image_metadata.py
infra/nginx/: Dockerfile  nginx.conf
infra/qdrant/: config.yaml  docker-compose.yaml
infra/redis/: docker-compose.yaml
infra/s3/: docker-compose.yaml
nginx/: Dockerfile  nginx.conf
redis/: docker-compose.yaml
scripts/: index_images.py
search_service/: Dockerfile  pyproject.toml
search_service/app/: main.py  search_engine.py  search_server.py  search_servicer.py
search_service/proto/: search_service.proto  search_service_pb2.py  search_service_pb2.pyi  search_service_pb2_grpc.py
shared_contracts/: pyproject.toml
shared_contracts/code_gen_scripts/: openai-gen.sh  proto-gen.sh
shared_contracts/shared_contracts/message_queue/: message_channels.py  message_contract.py  message_data_models.py
shared_contracts/shared_contracts/open_api/: entry_point.yaml
shared_contracts/shared_contracts/protos/image_encoding_service/: image_encoding_service_pb2.py  image_encoding_service_pb2.pyi  image_encoding_service_pb2_grpc.py
shared_contracts/shared_contracts/protos/indexing_service/: indexing_service.proto  indexing_service_pb2.py  indexing_service_pb2.pyi  indexing_service_pb2_grpc.py
shared_contracts/shared_contracts/protos/search_service/: search_service.proto  search_service_pb2.py  search_service_pb2.pyi  search_service_pb2_grpc.py
shared_contracts/shared_contracts/storage/: storage_contracts.py
shared_contracts/shared_contracts/vector_db/: vector_db_contracts.py
templates/: index.html
tests/integration/: conftest.py  test_apis.py  test_services.py  test_vector_db.py
tests/integration/test_db/: test_vector_db.py
tests/unit/: conftest.py
tests/unit/test_indexing_service/: test_indexing_service.py
tests/unit/test_models/: test_image_encoder.py  test_model_loader.py
(+1 files in other folders)
